--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "proyecto-coder",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "node-sass": "^9.0.0",
-    "nodemon": "^3.0.1"
-  }
+    "nodemon": "^3.0.1",
+    "prompt-sync": "^4.2.0"
+  },
+  "keywords": [],
+  "description": ""
 }
